# youtube-ai-resume

./: README.md  pyproject.toml  requirements.txt
src/youtube_ai_resume/: caption.py  cli.py  config.py  speech.py  summarizer.py
